fixed alignment issues on homepage & issue#4 task test, give user no ability to hover over active page

--- a/styles/header.css
+++ b/styles/header.css
@@ -19,7 +19,9 @@
 }
 
 .active {
-  background-color: #45565c;
+    background-color: #45565c;
+    pointer-events: none;
+    cursor: default
 }
 
 .img-center {
@@ -36,5 +38,6 @@
 
 i.hello{
 position: absolute;
-right: 0px
+right: 0px;
+vertical-align:text-bottom
 }
